--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <div class="text-center mx-auto"> <br>
-                                                <a href="busca_professor.html" class="btn default">Cadastrar</a>
+                                                <a href="busca_professor_logado.html" class="btn default">Cadastrar</a>
                                             </div>
                                         </div>
                                     </div>
